# AstroNavigator

./: .gitignore  00_overview.md  02_architecture.md  03_gui.md  AGENTS.md  README.md  pyproject.toml
combined_docs/: implementation.md  philosophy.md  specification.md
docs/: 01_requirements.md  02_architecture.md  04_planetarium.md  97_architecture_principles.md  98_naming_convention.md  99_glossary.md  ALL_FOR_AI.md  add.py  ai_development.md  development_environment.md  instruction_for_AI.md
docs/implementation/: 03_first_rendering.md  04_camera_control.md  05_selection.md  06_catalog.md  07_object_index.md  08_rendering_settings.md
src/astronavigator/: __main__.py
src/astronavigator/application/: application.py
src/astronavigator/camera/: sky_camera.py
src/astronavigator/catalog/: catalog.py  catalog_info.py  catalog_manager.py  debug_catalog_provider.py
src/astronavigator/debug/: stars.py
src/astronavigator/event/: event.py  event_bus.py  event_type.py
src/astronavigator/gui/: main_window.py  sky_view.py
src/astronavigator/input/: input_action.py  input_controller.py  key_bindings.py
src/astronavigator/layer/: layer.py  layer_manager.py
src/astronavigator/network/: downloader.py
src/astronavigator/rendering/: renderer.py  rendering_settings.py  star_color.py
src/astronavigator/scene/: focus.py  object_index.py  observer.py  scene.py  scene_controller.py  (+3 more)
tests/event/: test_controllers_publishes.py  test_event_bus.py  test_set_time_publishes.py
tests/scene/: test_controllers_updates.py  test_object_index.py  test_set_time_updates.py
(+14 files in other folders)
